Fixed post spacing.

--- a/src/components/ProjectLayout/index.css
+++ b/src/components/ProjectLayout/index.css
@@ -267,8 +267,12 @@
   flex-direction: column;
 }
 
+.project__section-content--wide {
+  max-width: var(--maxWidthXL);
+}
+
 .project__section-heading {
-  padding-bottom: var(--spaceL);
+  margin-bottom: var(--spaceL);
 }
 
 @media (max-width: 696px) {
@@ -300,6 +304,18 @@
 .project__text-row--center {
   align-items: center;
   text-align: center;
+}
+
+.project__text-row--justify-start {
+  align-self: flex-start;
+}
+
+.project__text-row--justify-center {
+  align-self: center;
+}
+
+.project__text-row--justify-end {
+  align-self: flex-end;
 }
 
 @media (max-width: 696px) {
