--- a/src/pages/Post/index.css
+++ b/src/pages/Post/index.css
@@ -266,6 +266,9 @@
 }
 
 .post__content {
+  --para-space: 26px;
+  --heading-space: 34px;
+
   width: 100%;
   align-self: center;
   margin-top: 120px;
@@ -298,6 +301,9 @@
 
 @media (max-width: 1680px) {
   .post__content {
+    --para-space: 20px;
+    --heading-space: 24px;
+
     grid-template-columns: 1fr 60px 680px 60px 1fr;
     margin-top: 80px;
   }
@@ -312,6 +318,8 @@
 
 @media (max-width: 1024px) {
   .post__content {
+    --heading-space: 22px;
+
     grid-template-columns: 100%;
     margin-top: 70px;
   }
@@ -323,6 +331,9 @@
 
 @media (max-width: 696px) {
   .post__content {
+    --para-space: 18px;
+    --heading-space: 22px;
+
     margin-top: 60px;
   }
 }
@@ -338,13 +349,11 @@
 }
 
 .post__paragraph {
-  --para-space: 26px;
-  --heading-space: 34px;
-
   grid-column: 3;
 }
 
-.post__heading-two + .post__paragraph {
+.post__heading-two + .post__paragraph,
+.post__paragraph + .post__heading-two {
   margin-top: var(--heading-space);
 }
 
@@ -354,26 +363,18 @@
 
 @media (max-width: 1680px) {
   .post__paragraph {
-    --para-space: 20px;
-    --heading-space: 24px;
-
     font-size: 20px;
   }
 }
 
 @media (max-width: 1024px) {
   .post__paragraph {
-    --heading-space: 22px;
-
     grid-column: 1;
   }
 }
 
 @media (max-width: 696px) {
   .post__paragraph {
-    --para-space: 18px;
-    --heading-space: 22px;
-
     font-size: 18px;
     hyphens: auto;
   }
